# whisper-arabic-dialects

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-bench.txt  requirements.txt
configs/: benchmark_matrix_headline.yaml  benchmark_matrix_pareto.yaml  benchmark_matrix_quality.yaml  benchmark_matrix_speed.yaml  benchmark_matrix_threads.yaml  dataset_mix.yaml  train_large_v3.yaml  train_large_v3_r8.yaml  train_medium.yaml  train_small.yaml  train_turbo.yaml  train_turbo_egyptian.yaml  train_turbo_r8.yaml  train_v4_curated.yaml
deploy/: 00_gcp_bootstrap.md  01_dataset_acquisition.md  02_gcp_training.md  03_gcp_benchmark.md  04_hetzner_benchmark.md  05_artifacts_publishing.md  06_v3_data_and_eval.md  07_contamination_postmortem.md  08_hetzner_cpx62_ood_bench.md
nemo_chunking_study/: README.md  linkedin_post_ar.md
paper/: COST.md  RESULTS_TABLE.md  SCORES.md  paper.md
runs/: results.jsonl
scripts/: _hf_audio_to_jsonl.py  bench_hf_transformers.py  bench_openai_whisper.py  bench_whisper_cpp.py  build_v3_mix.py  build_v3_test_clean.py  build_v4_full_mix.py  build_v4_mix.py  curate_v4_train.py  inspect_qwen3_asr.py  prep_per_dialect_split.py  prepare_arvoice.py  prepare_arzen.py  prepare_casablanca.py  prepare_common_voice.py  prepare_egyptian_clean.py  prepare_fleurs.py  prepare_halabi.py  prepare_masc.py  prepare_mgb3.py  prepare_mgb5.py  prepare_qasr.py  prepare_sada.py  prepare_tarteel.py  run_benchmark_matrix.py  run_cohere_transcribe_bench.py  run_conformer_ctc_bench.py  run_full_train.sh  (+9 more)
(+41 files in other folders)
